--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
             <div class="director-content">
                 <img src="photo.jpg" alt="Директор школи" class="director-photo">
                 <div class="director-text">
-                    <p>Ласкаво просимо до нашої школи! Я директор, мене зовуть Вікторія Рессі, і моя мрія – створити найкращий освітній простір для наших учнів.</p>
+                    <p>Ласкаво просимо до нашої школи! Я - Вікторія Рессі, і моя мрія – створити найкращий освітній простір для наших учнів.</p>
                     <p>Ми прагнемо розвивати унікальні таланти кожного студента та забезпечувати їм високоякісну освіту.</p>
                 </div>
             </div>
